--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Horiseon</title>
+    <!-- changed the title from website to Horiseon -->
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
+    <!-- changed div to header -->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
+            <!-- changed div to nav -->
             <ul>
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
                 <li><a href="#online-reputation-management">Online Reputation Management</a></li>
                 <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -34,7 +37,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div class="social-media-marketing">
+        <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
