Worked on changing semantic tag on hero image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             </ul>
         </nav>
     </header>
-    <img class="hero"></img>
+    <section class="hero"></section>
+    <!-- tryed changing to "img but it would follow same style as all other img" -->
     <section class="content">
         <!-- Added more semantic elements (section/article) -->
         <article class="search-engine-optimization">
