--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <section class="hero"></section>
-    <!-- tryed changing to "img but it would follow same style as all other img" -->
+    <!-- tryed changing to "img but it would follow same style as all" -->
     <section class="content">
         <!-- Added more semantic elements (section/article) -->
         <article class="search-engine-optimization">
